Documentation/stack (#76)
* Refactor of the code to follow the diamond architecture guidelines.

Creation of the API layer.
Simplification of logic.
Execution of datagenerator and flink in 05-main and spark in 04-processor-spark using sbt.
Update of aliases.sbt

* Cleaning of overloaded dependencies from the three in build.sbt

* Changing module names in build.sbt to help reading the tree visually.

* WIP.

Updating documentation

* Change the -c- in data generator to -u-

* Delete runSpark.sh and finish the HowTo

* Try new anchor for going back to the index

* Update all the "go back to index" so they work on GitHub page.
remove the go to index under the tittle:
- "Run with Docker"
- "Data Generator image"

* Remove all the "Go back to Index for levels h4 and h5"

* Remove three files that are not needed anymore

* Fix style

* Remove unused plugins.sbt

* Update versions in plugins.sbt

* Update library version and rename a final cas class in Vulcan (data-generator) to avoid ambiguous reference between it and anonymous class io.confluent.kafka.serializers.KafkaAvroSerializer {...}

* Replace the extension methods of the refined types for the configuration for Conversion types. It removed the need to add and additional method call using dot notation on the values.

* Expanded index and links to all the new levels.

* Add final in front of case classes and classes that should not be extended.

* Replace the safeAplly method with a Try plus .toEither on the method valueOf that is internal to enums. Include testing and fix a bug in the apply for positive ints.

* Fix Style and typo

* Abstract over the configuration.
- Move the definition of configuration to the api layer (for now kafka-consumer and flink)
- Change the API of kafka-consumer and flink to receive a configuration that inherits the api layer definition of the configuration
- Implement the configuration loader for both kafka-consumer and flink in the conf